--- a/docs/samples/llmisvc/precise-prefix-kv-cache-routing/llm-inference-service-qwen2-7b-gpu-kv-cache-routing.yaml
+++ b/docs/samples/llmisvc/precise-prefix-kv-cache-routing/llm-inference-service-qwen2-7b-gpu-kv-cache-routing.yaml
@@ -1,3 +1,4 @@
+# kv-cache
 apiVersion: serving.kserve.io/v1alpha1
 kind: LLMInferenceService
 metadata:
@@ -11,14 +12,20 @@ spec:
   router:
     scheduler:
       template:
+        volumes:
+        - emptyDir: { }
+          name: tokenizers
         containers:
           - name: main
+            volumeMounts:
+              - mountPath: /mnt/tokenizers
+                name: tokenizers
+                readOnly: false
             args:
-              - -v=4 # Debug level
-              - --poolName
-              - qwen2-7b-kv-cache-routing-inference-pool
-              - --poolNamespace
-              - llm-test
+              - --pool-name
+              - "{{ ChildName .ObjectMeta.Name `-inference-pool` }}"
+              - --pool-namespace
+              - "{{ .ObjectMeta.Namespace }}"
               - --zap-encoder
               - json
               - --grpc-port
@@ -48,6 +55,8 @@ spec:
                       kvBlockIndexConfig:
                         enableMetrics: true                   # Enable Prometheus metrics for KV cache index
                         metricsLoggingInterval: 60000000000   # Log metrics every 60 seconds (in nanoseconds)
+                      tokenizersPoolConfig:
+                        tokenizersCacheDir: /mnt/tokenizers
                 - type: load-aware-scorer
                 - type: max-score-picker
                 schedulingProfiles:
@@ -66,7 +75,7 @@ spec:
         env:
           # Configure vLLM for prefix caching with KV cache event publishing
           - name: VLLM_ADDITIONAL_ARGS
-            value: "--prefix-caching-hash-algo sha256_cbor --block-size 64 --kv_transfer_config '{\"kv_connector\":\"NixlConnector\",\"kv_role\":\"kv_both\"}' --kv-events-config '{\"enable_kv_cache_events\":true,\"publisher\":\"zmq\",\"endpoint\":\"tcp://{{ ChildName .ObjectMeta.Name `-epp-service` }}:5557\",\"topic\":\"kv@${POD_IP}@Qwen/Qwen2.5-7B-Instruct\"}'"
+            value: "--prefix-caching-hash-algo sha256 --block-size 64 --kv_transfer_config '{\"kv_connector\":\"NixlConnector\",\"kv_role\":\"kv_both\"}' --kv-events-config '{\"enable_kv_cache_events\":true,\"publisher\":\"zmq\",\"endpoint\":\"tcp://{{ ChildName .ObjectMeta.Name `-epp-service` }}:5557\",\"topic\":\"kv@${POD_IP}@Qwen/Qwen2.5-7B-Instruct\"}'"
           # Pod IP used in KV cache event topic
           - name: POD_IP
             valueFrom:
