RHOAIENG-41514: Bump llm-d components images to 0.4 (#1002)
* Bump llm-d components images to 0.4

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

* Add permissions to list inferencepools v1 in sidecar role

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

* Add pool group to routing-sidecar arguments

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

---------

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/config/llmisvc/config-llm-decode-worker-data-parallel.yaml
+++ b/config/llmisvc/config-llm-decode-worker-data-parallel.yaml
@@ -50,6 +50,7 @@ spec:
           - "--decoder-use-tls=true"
           - "--prefiller-use-tls=true"
           - "--enable-ssrf-protection=true"
+          - "--pool-group=inference.networking.x-k8s.io"
         volumeMounts:
           - mountPath: /var/run/kserve/tls
             name: tls-certs
