--- a/config/overlays/odh/remove-cert-manager.yaml
+++ b/config/overlays/odh/remove-cert-manager.yaml
@@ -11,3 +11,17 @@ kind: Certificate
 metadata:
   name: serving-cert
   namespace: kserve
+---
+$patch: delete
+apiVersion: cert-manager.io/v1
+kind: Issuer
+metadata:
+  name: llmisvc-selfsigned-issuer
+  namespace: kserve
+---
+$patch: delete
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: llmisvc-serving-cert
+  namespace: kserve
