comment out cert-manager from llmisvc
Signed-off-by: Spolti <fspolti@redhat.com>

--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -129,16 +129,16 @@ replacements:
       kind: Certificate
       name: serving-cert
       namespace: kserve
-  - fieldPaths:
-    - spec.commonName
-    - spec.dnsNames.0
-    options:
-      delimiter: '.'
-      index: 1
-    select:
-      kind: Certificate
-      name: llmisvc-serving-cert
-      namespace: kserve
+#  - fieldPaths:
+#    - spec.commonName
+#    - spec.dnsNames.0
+#    options:
+#      delimiter: '.'
+#      index: 1
+#    select:
+#      kind: Certificate
+#      name: llmisvc-serving-cert
+#      namespace: kserve
 #  - fieldPaths:
 #    - metadata.annotations.[cert-manager.io/inject-ca-from]
 #    options:
@@ -236,16 +236,16 @@ replacements:
     select:
       kind: ValidatingWebhookConfiguration
       name: llminferenceserviceconfig.serving.kserve.io
-  - fieldPaths:
-    - spec.commonName
-    - spec.dnsNames.0
-    options:
-      delimiter: '.'
-      index: 0
-    select:
-      kind: Certificate
-      name: llmisvc-serving-cert
-      namespace: kserve
+#  - fieldPaths:
+#    - spec.commonName
+#    - spec.dnsNames.0
+#    options:
+#      delimiter: '.'
+#      index: 0
+#    select:
+#      kind: Certificate
+#      name: llmisvc-serving-cert
+#      namespace: kserve
 # Replace llmisvc service account name
 - source:
     fieldPath: metadata.name
