--- a/config/overlays/odh/kustomization.yaml
+++ b/config/overlays/odh/kustomization.yaml
@@ -9,7 +9,7 @@ namespace: opendatahub
 
 patches:
 - path: remove-namespace.yaml
-- path: remove-cert-manager.yaml
+#- path: remove-cert-manager.yaml  # Not needed - cert-manager resources already commented out in base
 - path: inferenceservice-config-patch.yaml
 - path: set-resources-manager-patch.yaml
 
