add missing modelFormat annotation
Signed-off-by: Spolti <fspolti@redhat.com>

--- a/python/kserve/pyproject.toml
+++ b/python/kserve/pyproject.toml
@@ -83,6 +83,7 @@ test = [
     "jinja2<4.0.0,>=3.1.4",
     "grpcio-testing<2.0.0,>=1.60.0",
     "httpx-retries>=0.4.5,<1.0.0",
+    "timeout-sampler<2.0.0,>=1.0.0",
 ]
 dev = [
     "black[colorama]~=24.3.0",
