--- a/config/overlays/odh/kustomization.yaml
+++ b/config/overlays/odh/kustomization.yaml
@@ -1,15 +1,23 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+components:
+- ../../components/kserve
+- ../../components/llmisvc
+# - ../../localmodels
+
 resources:
 - ../../default
 - user-cluster-roles.yaml
+- network-policies.yaml
+
 
 namespace: opendatahub
 
 patches:
 - path: remove-namespace.yaml
-#- path: remove-cert-manager.yaml  # Not needed - cert-manager resources already commented out in base
+- path: remove-cert-manager.yaml
+- path: remove-clusterservingruntime-crd.yaml
 - path: inferenceservice-config-patch.yaml
 - path: set-resources-manager-patch.yaml
 
