odh kustomization changes
Signed-off-by: Spolti <fspolti@redhat.com>

--- a/config/configmap/inferenceservice.yaml
+++ b/config/configmap/inferenceservice.yaml
@@ -726,7 +726,7 @@ data:
 
   deploy: |-
     {
-      "defaultDeploymentMode": "RawDeployment"
+      "defaultDeploymentMode": "Serverless"
     }
 
   metricsAggregator: |-
@@ -746,11 +746,6 @@ data:
   security: |-
     {
       "autoMountServiceAccountToken": true
-    }
-
-  service: |-
-    {
-        "serviceClusterIPNone": true
     }
 
   inferenceService: |-
