--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -13,12 +13,10 @@ kind: Kustomization
 resources:
 - full/serving.kserve.io_inferenceservices.yaml
 - full/serving.kserve.io_trainedmodels.yaml
-# - serving.kserve.io_clusterservingruntimes.yaml # Not supported in ODH
-# - full/serving.kserve.io_clusterservingruntimes.yaml
+- full/serving.kserve.io_clusterservingruntimes.yaml
 - full/serving.kserve.io_servingruntimes.yaml
 - full/serving.kserve.io_inferencegraphs.yaml
 - full/serving.kserve.io_clusterstoragecontainers.yaml
-
 
 patches:
 # Fix for https://github.com/kubernetes/kubernetes/issues/91395
