--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -15,10 +15,6 @@ resources:
 - ../rbac
 - ../manager
 - ../webhook
-# - ../certmanager # not needed, because ODH is using OpenShift's serving certificates for WebHooks
-# - ../localmodels # This is commented out for 2.16
-# - ../localmodelnodes
-- ../llmisvc
 
 generatorOptions:
   disableNameSuffixHash: true
@@ -118,145 +114,62 @@ replacements:
       kind: Certificate
       name: serving-cert
       namespace: kserve
-#  - fieldPaths:
-#    - spec.commonName
-#    - spec.dnsNames.0
-#    options:
-#      delimiter: '.'
-#      index: 1
-#    select:
-#      kind: Certificate
-#      name: llmisvc-serving-cert
-#      namespace: kserve
-#  - fieldPaths:
-#    - metadata.annotations.[cert-manager.io/inject-ca-from]
-#    options:
-#      delimiter: '/'
-#      index: 0
-#    select:
-#      kind: CustomResourceDefinition
-#      name: inferenceservices.serving.kserve.io
-#  - fieldPaths:
-#    - metadata.annotations.[cert-manager.io/inject-ca-from]
-#    options:
-#      delimiter: '/'
-#      index: 0
-#    select:
-#      kind: MutatingWebhookConfiguration
-#      name: inferenceservice.serving.kserve.io
-#  - fieldPaths:
-#    - metadata.annotations.[cert-manager.io/inject-ca-from]
-#    options:
-#      delimiter: '/'
-#      index: 0
-#    select:
-#      kind: ValidatingWebhookConfiguration
-#      name: inferenceservice.serving.kserve.io
-#  - fieldPaths:
-#    - metadata.annotations.[cert-manager.io/inject-ca-from]
-#    options:
-#      delimiter: '/'
-#      index: 0
-#    select:
-#      kind: ValidatingWebhookConfiguration
-#      name: trainedmodel.serving.kserve.io
-#  - fieldPaths:
-#    - metadata.annotations.[cert-manager.io/inject-ca-from]
-#    options:
-#      delimiter: '/'
-#      index: 0
-#    select:
-#      kind: ValidatingWebhookConfiguration
-#      name: inferencegraph.serving.kserve.io
-#  - fieldPaths:
-#    - metadata.annotations.[cert-manager.io/inject-ca-from]
-#    options:
-#      delimiter: '/'
-#      index: 0
-#    select:
-#      kind: ValidatingWebhookConfiguration
-#      name: clusterservingruntime.serving.kserve.io
-#  - fieldPaths:
-#    - metadata.annotations.[cert-manager.io/inject-ca-from]
-#    options:
-#      delimiter: '/'
-#      index: 0
-#    select:
-#      kind: ValidatingWebhookConfiguration
-#      name: servingruntime.serving.kserve.io
-#  - fieldPaths:
-#      - metadata.annotations.[cert-manager.io/inject-ca-from]
-#    options:
-#      delimiter: '/'
-#      index: 0
-#    select:
-#      kind: ValidatingWebhookConfiguration
-#      name: localmodelcache.serving.kserve.io
-#  - fieldPaths:
-#      - metadata.annotations.[cert-manager.io/inject-ca-from]
-#    options:
-#      delimiter: '/'
-#      index: 0
-#    select:
-#      kind: ValidatingWebhookConfiguration
-#      name: llminferenceservice.serving.kserve.io
-#  - fieldPaths:
-#      - metadata.annotations.[cert-manager.io/inject-ca-from]
-#    options:
-#      delimiter: '/'
-#      index: 0
-#    select:
-#      kind: ValidatingWebhookConfiguration
-#      name: llminferenceserviceconfig.serving.kserve.io
-# Replace llmisvc webhook service name
-- source:
-    fieldPath: metadata.name
-    kind: Service
-    name: llmisvc-webhook-server-service
-    version: v1
-  targets:
   - fieldPaths:
-    - webhooks.*.clientConfig.service.name
+    - metadata.annotations.[cert-manager.io/inject-ca-from]
+    options:
+      delimiter: '/'
+      index: 0
+    select:
+      kind: CustomResourceDefinition
+      name: inferenceservices.serving.kserve.io
+  - fieldPaths:
+    - metadata.annotations.[cert-manager.io/inject-ca-from]
+    options:
+      delimiter: '/'
+      index: 0
+    select:
+      kind: MutatingWebhookConfiguration
+      name: inferenceservice.serving.kserve.io
+  - fieldPaths:
+    - metadata.annotations.[cert-manager.io/inject-ca-from]
+    options:
+      delimiter: '/'
+      index: 0
     select:
       kind: ValidatingWebhookConfiguration
-      name: llminferenceservice.serving.kserve.io
+      name: inferenceservice.serving.kserve.io
   - fieldPaths:
-    - webhooks.*.clientConfig.service.name
+    - metadata.annotations.[cert-manager.io/inject-ca-from]
+    options:
+      delimiter: '/'
+      index: 0
     select:
       kind: ValidatingWebhookConfiguration
-      name: llminferenceserviceconfig.serving.kserve.io
-#  - fieldPaths:
-#    - spec.commonName
-#    - spec.dnsNames.0
-#    options:
-#      delimiter: '.'
-#      index: 0
-#    select:
-#      kind: Certificate
-#      name: llmisvc-serving-cert
-#      namespace: kserve
-# Replace llmisvc service account name
-- source:
-    fieldPath: metadata.name
-    kind: ServiceAccount
-    name: llmisvc-controller-manager
-    version: v1
-  targets:
+      name: trainedmodel.serving.kserve.io
   - fieldPaths:
-    - subjects.*.name
+    - metadata.annotations.[cert-manager.io/inject-ca-from]
+    options:
+      delimiter: '/'
+      index: 0
     select:
-      kind: ClusterRoleBinding
-      name: llmisvc-manager-rolebinding
+      kind: ValidatingWebhookConfiguration
+      name: inferencegraph.serving.kserve.io
   - fieldPaths:
-    - subjects.*.name
+    - metadata.annotations.[cert-manager.io/inject-ca-from]
+    options:
+      delimiter: '/'
+      index: 0
     select:
-      kind: RoleBinding
-      name: llmisvc-leader-election-rolebinding
+      kind: ValidatingWebhookConfiguration
+      name: clusterservingruntime.serving.kserve.io
   - fieldPaths:
-    - spec.template.spec.serviceAccountName
+    - metadata.annotations.[cert-manager.io/inject-ca-from]
+    options:
+      delimiter: '/'
+      index: 0
     select:
-      kind: Deployment
-      name: llmisvc-controller-manager
+      kind: ValidatingWebhookConfiguration
+      name: servingruntime.serving.kserve.io
     # Protect the /metrics endpoint by putting it behind auth.
     # Only one of manager_auth_proxy_patch.yaml and
     # manager_prometheus_metrics_patch.yaml should be enabled.
@@ -268,36 +181,12 @@ replacements:
     #- manager_prometheus_metrics_patch.yaml
 patches:
 - path: manager_image_patch.yaml
-#- path: manager_auth_proxy_patch.yaml
+- path: manager_auth_proxy_patch.yaml
 - path: isvc_mutatingwebhook_cainjection_patch.yaml
 - path: isvc_validatingwebhook_cainjection_patch.yaml
 - path: inferencegraph_validatingwebhook_cainjection_patch.yaml
 - path: trainedmodel_validatingwebhook_cainjection_patch.yaml
-#- path: clusterservingruntime_validatingwebhook_cainjection_patch.yaml
+- path: clusterservingruntime_validatingwebhook_cainjection_patch.yaml
 - path: servingruntime_validationwebhook_cainjection_patch.yaml
-- path: svc_webhook_cainjection_patch.yaml
 - path: manager_resources_patch.yaml
 - path: cainjection_conversion_webhook.yaml
-- path: llmisvc_svc_webhook_cainjection_patch.yaml
-# - path: localmodel_manager_image_patch.yaml
-# - path: localmodelnode_agent_image_patch.yaml
-# Since OpenShift serving-certificates are being used,
-# remove CA bundle placeholders
-# - patch: |-
-#     - op: remove
-#       path: "/spec/conversion/webhook/clientConfig/caBundle"
-#   target:
-#     kind: CustomResourceDefinition
-#     name: inferenceservices.serving.kserve.io
-# - patch: |-
-#     - op: remove
-#       path: "/webhooks/0/clientConfig/caBundle"
-#     - op: remove
-#       path: "/webhooks/1/clientConfig/caBundle"
-#   target:
-#     kind: MutatingWebhookConfiguration
-# - patch: |-
-#     - op: remove
-#       path: "/webhooks/0/clientConfig/caBundle"
-#   target:
-#     kind: ValidatingWebhookConfiguration
