--- a/config/llmisvc/kustomization.yaml
+++ b/config/llmisvc/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - service.yaml
   - manager.yaml
   - gateway-inference-extension.yaml
-#  - ../certmanager/llmisvc  # ODH uses OpenShift serving certificates
+  - ../certmanager/llmisvc
   - ../rbac/llmisvc
   - ../llmisvcconfig
   - ../webhook/llmisvc
@@ -30,16 +30,16 @@ replacements:
     select:
       kind: ValidatingWebhookConfiguration
       name: llminferenceserviceconfig.serving.kserve.io
-#  - fieldPaths:
-#    - spec.commonName
-#    - spec.dnsNames.0
-#    options:
-#      delimiter: '.'
-#      index: 1
-#    select:
-#      kind: Certificate
-#      name: llmisvc-serving-cert
-#      namespace: kserve
+  - fieldPaths:
+    - spec.commonName
+    - spec.dnsNames.0
+    options:
+      delimiter: '.'
+      index: 1
+    select:
+      kind: Certificate
+      name: llmisvc-serving-cert
+      namespace: kserve
   - fieldPaths:
       - metadata.annotations.[cert-manager.io/inject-ca-from]
     options:
@@ -73,16 +73,16 @@ replacements:
     select:
       kind: ValidatingWebhookConfiguration
       name: llminferenceserviceconfig.serving.kserve.io
-#  - fieldPaths:
-#    - spec.commonName
-#    - spec.dnsNames.0
-#    options:
-#      delimiter: '.'
-#      index: 0
-#    select:
-#      kind: Certificate
-#      name: llmisvc-serving-cert
-#      namespace: kserve
+  - fieldPaths:
+    - spec.commonName
+    - spec.dnsNames.0
+    options:
+      delimiter: '.'
+      index: 0
+    select:
+      kind: Certificate
+      name: llmisvc-serving-cert
+      namespace: kserve
 # Replace llmisvc service account name
 - source:
     fieldPath: metadata.name
