--- a/config/overlays/test/kustomization.yaml
+++ b/config/overlays/test/kustomization.yaml
@@ -2,8 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- ../../crd/external
-- ../../default
 - ../../base
 - minio
 
@@ -15,6 +13,5 @@ components:
 patches:
 - path: configmap/inferenceservice.yaml
 - path: manager_image_patch.yaml
-# - path: localmodel_manager_image_patch.yaml
-# - path: localmodelnode_agent_image_patch.yaml
-
+- path: localmodel_manager_image_patch.yaml
+- path: localmodelnode_agent_image_patch.yaml
