kustomization re-work: move odh customizations to its overlay
Changes:
  config/overlays/odh/ (ODH overlay modifications):
  - kustomization.yaml — Added annotationSelector-based cert-manager → OpenShift CA patches for all webhooks/CRDs (ValidatingWebhookConfiguration, MutatingWebhookConfiguration, CustomResourceDefinition), added serving-cert patches for both webhook Services, added
  remove-auth-proxy-patch.yaml
  - openshift-serving-cert-patch.yaml — New: JSON patch adding service.beta.openshift.io/serving-cert-secret-name: kserve-webhook-server-cert to the kserve webhook Service
  - openshift-serving-cert-llmisvc-patch.yaml — New: Same annotation for the llmisvc webhook Service with llmisvc-webhook-server-cert
  - remove-auth-proxy-patch.yaml — New: Strategic merge patch removing the kube-rbac-proxy sidecar container from kserve-controller-manager Deployment

  config/overlays/odh-test/ (new test overlay):
  - kustomization.yaml — New: Layers on ../odh + ../test/minio + ../../crd/external, sets namespace: kserve, includes test-specific patches
  - manager_image_patch.yaml — New: Copy of test manager image patch (kustomize blocks symlinks)
  - localmodel_manager_image_patch.yaml — New: Copy of localmodel manager patch (commented out in kustomization)
  - localmodelnode_agent_image_patch.yaml — New: Copy of localmodel node agent patch (commented out in kustomization)
  - dsc.yaml — Renamed from config/overlays/test/dsc.yaml (unchanged content)
  - dsci.yaml — Renamed from config/overlays/test/dsci.yaml (unchanged content)
  - configmap/inferenceservice.yaml — New: Test inferenceservice config patch
  - configmap/inferenceservice-openshift-ci-raw.yaml — New: Raw deployment CI config
  - configmap/inferenceservice-openshift-ci-serverless-predictor.yaml — New: Serverless predictor CI config

  test/scripts/openshift-ci/setup-e2e-tests.sh:
  - Restored conditional KSERVE_NAMESPACE (kserve for manual, opendatahub for operator)
  - Changed overlay from config/overlays/t

--- a/config/overlays/odh/kustomization.yaml
+++ b/config/overlays/odh/kustomization.yaml
@@ -1,15 +1,17 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+resources:
+- ../../base
+- ../../crd/full/llmisvc
+# - ../../crd/full/localmodel
+- user-cluster-roles.yaml
+- network-policies.yaml
+
 components:
 - ../../components/kserve
 - ../../components/llmisvc
 # - ../../localmodels
-
-resources:
-- ../../base
-- user-cluster-roles.yaml
-- network-policies.yaml
 
 namespace: opendatahub
 
@@ -19,14 +21,27 @@ patches:
 - path: remove-clusterservingruntime-crd.yaml
 - path: inferenceservice-config-patch.yaml
 - path: set-resources-manager-patch.yaml
+- path: remove-auth-proxy-patch.yaml
 - target:
     kind: ValidatingWebhookConfiguration
-    name: inferenceservice.serving.kserve.io
+    annotationSelector: cert-manager.io/inject-ca-from
+  path: openshift-ca-patch.yaml
+- target:
+    kind: MutatingWebhookConfiguration
+    annotationSelector: cert-manager.io/inject-ca-from
   path: openshift-ca-patch.yaml
 - target:
     kind: CustomResourceDefinition
-    name: inferenceservices.serving.kserve.io
+    annotationSelector: cert-manager.io/inject-ca-from
   path: openshift-ca-patch.yaml
+- target:
+    kind: Service
+    name: kserve-webhook-server-service
+  path: openshift-serving-cert-patch.yaml
+- target:
+    kind: Service
+    name: llmisvc-webhook-server-service
+  path: openshift-serving-cert-llmisvc-patch.yaml
 
 replacements:
 - source:
