--- a/config/overlays/odh-xks/patches/patch-inferenceservice-config.yaml
+++ b/config/overlays/odh-xks/patches/patch-inferenceservice-config.yaml
@@ -28,6 +28,8 @@ data:
         "internal.serving.kserve.io/storage-initializer-sourceuri",
         "kubectl.kubernetes.io/last-applied-configuration",
         "security.opendatahub.io/enable-auth",
-        "networking.knative.dev/visibility"
+        "networking.knative.dev/visibility",
+        "opendatahub.io/hardware-profile-name",
+        "opendatahub.io/hardware-profile-namespace"
       ]
     }
