--- a/.tekton/kserve-router-push.yaml
+++ b/.tekton/kserve-router-push.yaml
@@ -23,7 +23,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/opendatahub/kserve-router:odh-stable
+    value: quay.io/opendatahub/kserve-router:odh-v3.4-EA1
   - name: dockerfile
     value: router.Dockerfile
   - name: path-context
