--- a/.tekton/kserve-storage-initializer-push.yaml
+++ b/.tekton/kserve-storage-initializer-push.yaml
@@ -23,7 +23,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/opendatahub/kserve-storage-initializer:odh-stable
+    value: quay.io/opendatahub/kserve-storage-initializer:odh-v3.4-EA1
   - name: dockerfile
     value: storage-initializer.Dockerfile
   - name: path-context
