fix(llmisvc): allow custom gateway with managed route (#5075)
Signed-off-by: Bartosz Majsak <bartosz.majsak@gmail.com>

--- a/test/e2e/pytest.ini
+++ b/test/e2e/pytest.ini
@@ -26,4 +26,5 @@ markers =
     cluster_intel: test targeting cluster with Intel
     cluster_nvidia: test targeting cluster with NVIDIA
     cluster_nvidia_roce: test targeting cluster with NVIDIA ROCe
-    cluster_single_node: test targeting single node cluster    
+    cluster_single_node: test targeting single node cluster
+    llmd_simulator: test using llm-d simulator
