Migrate from MinIO to SeaweedFS
Signed-off-by: Spolti <fspolti@redhat.com>

--- a/config/overlays/odh-test/kustomization.yaml
+++ b/config/overlays/odh-test/kustomization.yaml
@@ -6,7 +6,7 @@ namespace: kserve
 resources:
 - ../../crd/external
 - ../odh
-- ../test/minio
+- ../test/s3-local-backend
 
 patches:
 - path: configmap/inferenceservice.yaml
