--- a/test/overlays/openshift-ci/kustomization.yaml
+++ b/test/overlays/openshift-ci/kustomization.yaml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- minio-tls-custom-cert
-- minio-tls-serving-cert
+- seaweedfs-tls-custom-cert
+- seaweedfs-tls-serving-cert
